# coman

./: Cargo.toml  Makefile  README.md  maxy.db  run-tests.sh  test.json
src/: helper.rs  lib.rs  main.rs
src/cli/: commands.rs  manager.rs  manager_ops.rs  mod.rs  request.rs  request_data.rs  request_ops.rs  test_ops.rs
src/commands/: manager.rs  mod.rs  request.rs  run.rs  url.rs
src/core/: collection_manager.rs  collection_manager_ops.rs  endpoint_ops.rs  errors.rs  http_client.rs  http_request.rs  http_response.rs  mod.rs  utils.rs
src/models/: collection.rs
src/test/: mod.rs
