[package]
name = "coman"
version = "1.1.1"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", default-features = false, features = ["http2", "json", "stream", "multipart", "native-tls-vendored"] } # use native-tls-vendored for compatibility with Windows
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
infer = "0.19"
