[package]
name = "coman-cli"
version = "1.1.5"
edition = "2021"
description = "Coman is a simple API manager designed to streamline API management and request sending."
license = "MIT OR Apache-2.0"
authors = ["Yasser Harbi"]
repository = "https://github.com/bugyboo/coman"
keywords = ["api", "cli", "http", "postman", "yaml"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[[bin]]
name = "coman"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.31"
once_cell = "1.21.3"
reqwest = { version = "0.13.1", default-features = false, features = ["http2", "json", "stream", "multipart", "native-tls-vendored"] } # use native-tls-vendored for compatibility with Windows
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
infer = "0.19"
tempfile = "3.24.0"
indicatif = "0.18.3"

[dev-dependencies]
serial_test = "3"             # Run tests sequentially when needed
