[package]
name = "coman-cli"
version = "1.2.0"
edition = "2021"
description = "Coman is a simple API manager designed to streamline API management and request sending. Can be used as a library or CLI."
license = "MIT OR Apache-2.0"
authors = ["Yasser Harbi"]
repository = "https://github.com/bugyboo/coman"
keywords = ["api", "cli", "http", "postman", "yaml"]
categories = ["command-line-utilities", "web-programming"]
readme = "README.md"

[lib]
name = "coman"
path = "src/lib.rs"

[[bin]]
name = "coman"
path = "src/bin/coman.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:colored", "dep:indicatif", "dep:atty"]

[dependencies]
# Core dependencies (always included)
futures = "0.3.31"
reqwest = { version = "0.13.1", default-features = false, features = ["http2", "json", "stream", "multipart", "native-tls-vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
infer = "0.19"
tempfile = "3.24.0"

# CLI-only dependencies (optional)
clap = { version = "4.5.54", features = ["derive"], optional = true }
colored = { version = "3.1.1", optional = true }
indicatif = { version = "0.18.3", optional = true }
atty = { version = "0.2.14", optional = true }

[dev-dependencies]
serial_test = "3"             # Run tests sequentially when needed
